fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/Medical_Education_Grant__c.object-meta.xml
<CustomObject>
    <description>CE - Medical Education Grant (This Object is intended for MEG Form Integration)</description>
    <label>Medical Education Grant</label>
    <nameField>
        <displayFormat>MEG-{0000}</displayFormat>
        <label>Medical Education Grant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Education Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>