fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Acknowledge_expenditure_accounting__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_expenditure_accounting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An accounting detailing the expenditure of grant funds must be submitted to teleflex within sixty days of the end of the program/event, and any unused funds must be returned to Teleflex at that time</description>
    <inlineHelpText>An accounting detailing the expenditure of grant funds must be submitted to teleflex within sixty days of the end of the program/event, and any unused funds must be returned to Teleflex at that time</inlineHelpText>
    <label>Acknowledge expenditure accounting</label>
    <type>Checkbox</type>
</CustomField>