fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Actual_Expense__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expense__c</fullName>
    <formula>(Monetary_NEW__c+Product_In_Kind_New__c+ 
Technician_s_NEW__c+Cadaveric_Tissue_New__c+ 
Simulator_s_NEW__c+Other_Approved_Value_NEW__c+ 
Shipping_New__c)-Post_Grant_Return_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>