fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Approved_Grant_Recipient_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Approved_Grant_Recipient_Email_Address__c</fullName>
    <label>Approved Grant Recipient Email Address</label>
    <type>Email</type>
</CustomField>