fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Are_credit_hours_planned_for_this_act__c.field-meta.xml
<CustomField>
    <fullName>Are_credit_hours_planned_for_this_act__c</fullName>
    <label>Are credit hours planned for activity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>