fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Budget_Reconciliation_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Reconciliation_Received_Date__c</fullName>
    <label>Budget Reconciliation Received  Date</label>
    <type>Date</type>
</CustomField>