fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Cadaveric_Tissue__c.field-meta.xml
<CustomField>
    <fullName>Cadaveric_Tissue__c</fullName>
    <label>Cadaveric Tissue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>