fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Commercial_Supporter__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Supporter__c</fullName>
    <description>nput the correct entity based on the area:
Arrow International is for Vascular only.
Teleflex Medical is for all other BUsI.</description>
    <formula>IF( ISPICKVAL(Education_Record__r.Business_Unit__c, &quot;VA&quot;), &quot;Arrow International&quot;, &quot;Teleflex Medical&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial Supporter</label>
    <type>Text</type>
</CustomField>