fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Course_Accreditation__c.field-meta.xml
<CustomField>
    <fullName>Course_Accreditation__c</fullName>
    <label>Course Accreditation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCME</fullName>
            </value>
            <value>
                <fullName>ACPE</fullName>
            </value>
            <value>
                <fullName>ANCC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>