fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Course_Accreditation_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Course_Accreditation_Other_Details__c</fullName>
    <label>Course Accreditation Other Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>