fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Description_of_the_Program_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Description_of_the_Program_Objectives__c</fullName>
    <label>Description of the Program Objectives</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>