fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Details_for_Other_Approved_Value__c.field-meta.xml
<CustomField>
    <fullName>Details_for_Other_Approved_Value__c</fullName>
    <label>Details For Other Approved  Value</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>