fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Education_Record__c.field-meta.xml
<CustomField>
    <fullName>Education_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Education Record</label>
    <referenceTo>Education_Record__c</referenceTo>
    <relationshipLabel>Medical Education Grants</relationshipLabel>
    <relationshipName>Medical_Education_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>