fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Expert__c.field-meta.xml
<CustomField>
    <fullName>Expert__c</fullName>
    <label>Expert</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Literature Searches of peer-reviewed medical literature</fullName>
            </value>
            <value>
                <fullName>Advisory Board Feedback (Indepoendent of TFX)</fullName>
            </value>
            <value>
                <fullName>Expert practitioner/thought-leader interactions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>