fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Faculty_Support__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Support__c</fullName>
    <label>Faculty Support</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>