fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Faculty_Technicians__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Technicians__c</fullName>
    <label>Technician(s)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>