fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/How_many_attendees_benefit_from_prior__c.field-meta.xml
<CustomField>
    <fullName>How_many_attendees_benefit_from_prior__c</fullName>
    <inlineHelpText>How many attendees benefited from the previously supported program (s) ?</inlineHelpText>
    <label>How many attendees benefit from prior ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>