fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Identification_of_the_CME_Provider__c.field-meta.xml
<CustomField>
    <fullName>Identification_of_the_CME_Provider__c</fullName>
    <inlineHelpText>Identification of the CME Provider , if applicable</inlineHelpText>
    <label>Identification of the CME Provider</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>