fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/If_you_received_grant_support_describe__c.field-meta.xml
<CustomField>
    <fullName>If_you_received_grant_support_describe__c</fullName>
    <inlineHelpText>If yes, please describe the support type, name of programs(s)</inlineHelpText>
    <label>If you received grant support describe</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>