fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/In_Kind_Shipping_Rcvd__c.field-meta.xml
<CustomField>
    <fullName>In_Kind_Shipping_Rcvd__c</fullName>
    <description>Manually entered</description>
    <inlineHelpText>Used to reflect the total actual expense for this medical education grant.</inlineHelpText>
    <label>In-Kind Shipping Rcvd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>