fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/In_Kind_Shipping_Rcvd_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>In_Kind_Shipping_Rcvd_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-Kind Shipping Rcvd</label>
    <type>Checkbox</type>
</CustomField>