fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Is_Teleflex_the_sole_supporter__c.field-meta.xml
<CustomField>
    <fullName>Is_Teleflex_the_sole_supporter__c</fullName>
    <label>Is Teleflex the sole supporter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>