fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Learning_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Learning_Objectives__c</fullName>
    <label>Learning Objectives</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>