fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/LOA_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>LOA_Sent_Date__c</fullName>
    <label>LOA Sent Date</label>
    <type>Date</type>
</CustomField>