fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Monetary__c.field-meta.xml
<CustomField>
    <fullName>Monetary__c</fullName>
    <label>Monetary</label>
    <summarizedField>Medical_Education_Grant_Monetary_Request__c.Approved_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Medical_Education_Grant_Monetary_Request__c.Is_Approved__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Medical_Education_Grant_Monetary_Request__c.Medical_Education_Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>