fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Monetary_NEW__c.field-meta.xml
<CustomField>
    <fullName>Monetary_NEW__c</fullName>
    <label>Monetary</label>
    <summarizedField>Medical_Education_Grant_Products__c.Product_Value__c</summarizedField>
    <summaryFilterItems>
        <field>Medical_Education_Grant_Products__c.Category__c</field>
        <operation>equals</operation>
        <value>Monetary</value>
    </summaryFilterItems>
    <summaryForeignKey>Medical_Education_Grant_Products__c.Medical_Education_Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>