fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Needs_Assessment_Details__c.field-meta.xml
<CustomField>
    <fullName>Needs_Assessment_Details__c</fullName>
    <label>Needs Assessment Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>