fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Needs_Assessment_Sources__c.field-meta.xml
<CustomField>
    <fullName>Needs_Assessment_Sources__c</fullName>
    <label>Needs Assessment Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory Board Feedback (Indepoendent of TFX)</fullName>
                <label>Advisory Board Feedback (Independent of TFX)</label>
            </value>
            <value>
                <fullName>Expert practitioner/thought-leader interactions</fullName>
            </value>
            <value>
                <fullName>Focus Panels</fullName>
            </value>
            <value>
                <fullName>Literature Searches of peer-reviewed medical literature</fullName>
            </value>
            <value>
                <fullName>Medical Education feedback</fullName>
            </value>
            <value>
                <fullName>National and Regional Data from National Reserch</fullName>
            </value>
            <value>
                <fullName>Observed Data</fullName>
            </value>
            <value>
                <fullName>Survey(s) of the proposed target audience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>