fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Number_of_Technicians_requested__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Technicians_requested__c</fullName>
    <label>Number of Technicians requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>