fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Observed_Data__c.field-meta.xml
<CustomField>
    <fullName>Observed_Data__c</fullName>
    <label>Observed Data</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>National and Regional Data from National Reserch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>