fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Other_related_area__c.field-meta.xml
<CustomField>
    <fullName>Other_related_area__c</fullName>
    <label>Other related area</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>