fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Outcomes_from_prior__c.field-meta.xml
<CustomField>
    <fullName>Outcomes_from_prior__c</fullName>
    <inlineHelpText>What are the measurable outcomes from the previously supported program (s)?</inlineHelpText>
    <label>Outcomes from prior</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>