fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Person_Responsible_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Person_Responsible_Email_Address__c</fullName>
    <label>Person Responsible Email Address</label>
    <type>Email</type>
</CustomField>