fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Person_Responsible_for_Grant_Request__c.field-meta.xml
<CustomField>
    <fullName>Person_Responsible_for_Grant_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Responsible for Grant Request</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Medical Education Grants</relationshipLabel>
    <relationshipName>Medical_Education_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>