fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Post_Grant_Return__c.field-meta.xml
<CustomField>
    <fullName>Post_Grant_Return__c</fullName>
    <inlineHelpText>This is the amount that is returned post grant.</inlineHelpText>
    <label>Post Grant Return</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>