fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Presentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Type__c</fullName>
    <label>Presentation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference/Symposium/Congress (International. National, Regional)</fullName>
                <label>Conference/Symposium/Congress (Int&apos;l. Nat., Reg.)</label>
            </value>
            <value>
                <fullName>Presentation (Local)</fullName>
            </value>
            <value>
                <fullName>Hands On</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>LMS</fullName>
            </value>
            <value>
                <fullName>CD-ROM</fullName>
            </value>
            <value>
                <fullName>Fellowship</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>