fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Presentation_Type_Other_Detail__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Type_Other_Detail__c</fullName>
    <label>Presentation Type Other Detail</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>