fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Product_In_Kind__c.field-meta.xml
<CustomField>
    <fullName>Product_In_Kind__c</fullName>
    <label>Product/In-Kind</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>