fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Product_In_Kind_New__c.field-meta.xml
<CustomField>
    <fullName>Product_In_Kind_New__c</fullName>
    <label>Product In/Kind</label>
    <summarizedField>Medical_Education_Grant_Products__c.Product_Value__c</summarizedField>
    <summaryFilterItems>
        <field>Medical_Education_Grant_Products__c.Category__c</field>
        <operation>equals</operation>
        <value>Product/In-Kind</value>
    </summaryFilterItems>
    <summaryForeignKey>Medical_Education_Grant_Products__c.Medical_Education_Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>