fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Product_Requested_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Product_Requested_Quantity__c</fullName>
    <inlineHelpText>Requested Quantity of Product (E.G. 3 each, 2 kits)</inlineHelpText>
    <label>Product Requested Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>