fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Program_Evaluation_Received__c.field-meta.xml
<CustomField>
    <fullName>Program_Evaluation_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Evaluation Received</label>
    <type>Checkbox</type>
</CustomField>