fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Program_Evaluation_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Evaluation_Received_Date__c</fullName>
    <label>Program Evaluation Received  Date</label>
    <type>Date</type>
</CustomField>