fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Program_Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Event_End_Date__c</fullName>
    <label>Program/Event End Date</label>
    <type>Date</type>
</CustomField>