fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Program_Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Program_Event_Location__c</fullName>
    <label>Program/Event Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>