fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Projected_Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Projected_Number_of_Attendees__c</fullName>
    <label>Projected Number of Attendees</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>