fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <description>This field is needed because integration is not yet in place.</description>
    <label>CMA Review Date</label>
    <type>Date</type>
</CustomField>