fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monetary</fullName>
            </value>
            <value>
                <fullName>Product/In-Kind Support</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>Cadaveric Tissue</fullName>
            </value>
            <value>
                <fullName>Simulator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>