fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Request Received Date</label>
    <type>Date</type>
</CustomField>