fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Simulators__c.field-meta.xml
<CustomField>
    <fullName>Simulators__c</fullName>
    <label>Simulators</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>