fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Sponsorship_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Benefits__c</fullName>
    <label>Sponsorship Benefits</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>