fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMT/PM</fullName>
            </value>
            <value>
                <fullName>NP/PA/CRNA</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Respiratory Therapist</fullName>
            </value>
            <value>
                <fullName>Specialty/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>