fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Target_Audience_Specialty_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience_Specialty_Other_Details__c</fullName>
    <label>Target Audience Specialty Other Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>