fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/TaxId__c.field-meta.xml
<CustomField>
    <fullName>TaxId__c</fullName>
    <formula>Requesting_Organization__r.Tax_Id__c</formula>
    <label>Tax Id</label>
    <type>Text</type>
</CustomField>