fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/fields/Total_Monetary_Request_Proposed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Monetary_Request_Proposed_Amount__c</fullName>
    <label>Total Monetary Request Proposed Amount</label>
    <summarizedField>Medical_Education_Grant_Monetary_Request__c.Proposed_Amount__c</summarizedField>
    <summaryForeignKey>Medical_Education_Grant_Monetary_Request__c.Medical_Education_Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>