fullSandbox11072023/force-app/main/default/objects/Medical_Education_Grant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Requesting_Organization__c</columns>
    <columns>Person_Responsible_for_Grant_Request__c</columns>
    <columns>Approved_Grant_Recipient__c</columns>
    <columns>Education_Record__c</columns>
    <columns>LOA_Complete__c</columns>
    <columns>LOA_Complete_Date__c</columns>
    <columns>LOA_Sent__c</columns>
    <columns>LOA_Sent_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>In_Kind_Shipping_Rcvd__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>